--- a/ui/dialog_create.ui
+++ b/ui/dialog_create.ui
@@ -3,46 +3,46 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkAdjustment" id="spin_width_adj">
-    <property name="lower">1</property>
-    <property name="upper">1000</property>
-    <property name="value">50</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+    <property name="lower">1.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">50.0</property>
+    <property name="step-increment">0.1</property>
+    <property name="page-increment">10.0</property>
   </object>
   <object class="GtkAdjustment" id="spin_height_adj">
-    <property name="lower">1</property>
-    <property name="upper">1000</property>
-    <property name="value">50</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+    <property name="lower">1.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">50.0</property>
+    <property name="step-increment">0.1</property>
+    <property name="page-increment">10.0</property>
   </object>
   <object class="GtkAdjustment" id="spin_x_adj">
-    <property name="lower">0</property>
-    <property name="upper">1000</property>
-    <property name="value">0</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">20</property>
+    <property name="lower">0.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">0.0</property>
+    <property name="step-increment">1.0</property>
+    <property name="page-increment">20.0</property>
   </object>
   <object class="GtkAdjustment" id="spin_y_adj">
-    <property name="lower">0</property>
-    <property name="upper">1000</property>
-    <property name="value">0</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">20</property>
+    <property name="lower">0.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">0.0</property>
+    <property name="step-increment">1.0</property>
+    <property name="page-increment">20.0</property>
   </object>
   <object class="GtkAdjustment" id="spin_z_adj">
-    <property name="lower">0</property>
-    <property name="upper">1000</property>
-    <property name="value">0</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">20</property>
+    <property name="lower">0.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">0.0</property>
+    <property name="step-increment">1.0</property>
+    <property name="page-increment">20.0</property>
   </object>
   <object class="GtkAdjustment" id="spin_scale_adj">
-    <property name="lower">1</property>
-    <property name="upper">1000</property>
-    <property name="value">100</property>
-    <property name="step-increment">10</property>
-    <property name="page-increment">100</property>
+    <property name="lower">1.0</property>
+    <property name="upper">1000.0</property>
+    <property name="value">100.0</property>
+    <property name="step-increment">10.0</property>
+    <property name="page-increment">100.0</property>
   </object>
 
   <object class="GtkDialog" id="dialog_create">
@@ -98,7 +98,8 @@
                     <property name="max-width-chars">5</property>
                     <property name="placeholder-text" translatable="yes">Width (Å)</property>
                     <property name="adjustment">spin_width_adj</property>
-                    <property name="value">50</property>
+                    <property name="value">50.0</property>
+                    <property name="digits">2</property>
                     <property name="name">spin_width</property>
                   </object>
                   <packing>
@@ -125,7 +126,8 @@
                     <property name="max-width-chars">5</property>
                     <property name="placeholder-text" translatable="yes">Height (Å)</property>
                     <property name="adjustment">spin_height_adj</property>
-                    <property name="value">50</property>
+                    <property name="value">50.0</property>
+                    <property name="digits">2</property>
                     <property name="name">spin_height</property>
                   </object>
                   <packing>
@@ -184,7 +186,8 @@
                         <property name="max-width-chars">5</property>
                         <property name="placeholder-text" translatable="yes">x</property>
                         <property name="adjustment">spin_x_adj</property>
-                        <property name="value">0</property>
+                        <property name="value">0.0</property>
+                        <property name="digits">2</property>
                         <property name="name">spin_center_x</property>
                       </object>
                       <packing>
@@ -211,7 +214,8 @@
                         <property name="max-width-chars">5</property>
                         <property name="placeholder-text" translatable="yes">y</property>
                         <property name="adjustment">spin_y_adj</property>
-                        <property name="value">0</property>
+                        <property name="value">0.0</property>
+                        <property name="digits">2</property>
                         <property name="name">spin_center_y</property>
                       </object>
                       <packing>
@@ -238,7 +242,8 @@
                         <property name="max-width-chars">5</property>
                         <property name="placeholder-text" translatable="yes">z</property>
                         <property name="adjustment">spin_z_adj</property>
-                        <property name="value">0</property>
+                        <property name="value">0.0</property>
+                        <property name="digits">2</property>
                         <property name="name">spin_center_z</property>
                       </object>
                       <packing>
@@ -283,7 +288,8 @@
                         <property name="max-width-chars">5</property>
                         <property name="placeholder-text" translatable="yes">Width (Å)</property>
                         <property name="adjustment">spin_scale_adj</property>
-                        <property name="value">100</property>
+                        <property name="value">100.0</property>
+                        <property name="digits">2</property>
                         <property name="name">spin_scale</property>
                       </object>
                       <packing>
