Agrego el botón, aún sin funcionalidad.

--- a/graphenegui/ui/resources.qrc
+++ b/graphenegui/ui/resources.qrc
@@ -5,6 +5,7 @@
     <file>img/svg/delete.svg</file>
     <file>img/svg/import.svg</file>
     <file>img/svg/export.svg</file>
+    <file>img/svg/cnt.svg</file>
     <file>img/svg/dark_light_mode.svg</file>
     <file>img/svg/reduce.svg</file>
     <file>img/svg/prob.svg</file>
