--- a/graphenegui/ui/main.ui
+++ b/graphenegui/ui/main.ui
@@ -146,6 +146,28 @@
                 </size>
               </property>
             </widget>
+            <widget class="QPushButton" name="btnCNT">
+              <property name="minimumSize">
+                <size>
+                  <width>100</width>
+                  <height>40</height>
+                </size>
+              </property>
+              <property name="text">
+                <string>CNT</string>
+              </property>
+              <property name="icon">
+                <iconset>
+                  <normaloff>:/icons/img/svg/cnt.svg</normaloff>
+                </iconset>
+              </property>
+              <property name="iconSize">
+                <size>
+                  <width>25</width>
+                  <height>25</height>
+                </size>
+              </property>
+            </widget>
             <widget class="QPushButton" name="btnTheme">
               <property name="minimumSize">
                 <size>
