--- a/graphenegui/ui/resources.qrc
+++ b/graphenegui/ui/resources.qrc
@@ -6,6 +6,7 @@
     <file>img/svg/import.svg</file>
     <file>img/svg/export.svg</file>
     <file>img/svg/cnt.svg</file>
+    <file>img/svg/lock.svg</file>
     <file>img/svg/dark_light_mode.svg</file>
     <file>img/svg/reduce.svg</file>
     <file>img/svg/prob.svg</file>
