Agrego cambios visuales.

--- a/graphenegui/ui/resources.qrc
+++ b/graphenegui/ui/resources.qrc
@@ -12,6 +12,8 @@
     <file>img/svg/dark_light_mode.svg</file>
     <file>img/svg/reduce.svg</file>
     <file>img/svg/prob.svg</file>
+    <file>img/svg/oh.svg</file>
+    <file>img/svg/o.svg</file>
     <file>img/svg/remove_one.svg</file>
   </qresource>
 </RCC>
