--- a/graphenegui/ui/main.ui
+++ b/graphenegui/ui/main.ui
@@ -269,6 +269,132 @@
                   </property>
                 </widget>
               </item>
+
+              <!-- Lateral bar -->
+              <item row="1" column="2">
+                <widget class="QWidget" name="rightSidebar">
+                  <layout class="QVBoxLayout" name="vLayoutSidebar">
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QLabel" name="labelManual">
+                        <property name="text">
+                          <string>Manual</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QPushButton" name="btnAddOH">
+                        <property name="text">
+                          <string>-OH</string>
+                        </property>
+                        <property name="icon">
+                          <iconset>
+                            <normaloff>:/icons/img/svg/oh.svg</normaloff>
+                          </iconset>
+                        </property>
+                        <property name="checkable">
+                          <bool>true</bool>
+                        </property>
+                        <property name="minimumSize">
+                          <size>
+                            <width>90</width>
+                            <height>35</height>
+                          </size>
+                        </property>
+                      </widget>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QPushButton" name="btnAddO">
+                        <property name="text">
+                          <string>-O-</string>
+                        </property>
+                        <property name="checkable">
+                          <bool>true</bool>
+                        </property>
+                        <property name="icon">
+                          <iconset>
+                            <normaloff>:/icons/img/svg/o.svg</normaloff>
+                          </iconset>
+                        </property>
+                        <property name="minimumSize">
+                          <size>
+                            <width>90</width>
+                            <height>35</height>
+                          </size>
+                        </property>
+                      </widget>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QPushButton" name="btnRemoveOx">
+                        <property name="text">
+                          <string>Remove</string>
+                        </property>
+                        <property name="icon">
+                          <iconset>
+                            <normaloff>:/icons/img/svg/remove_one.svg</normaloff>
+                          </iconset>
+                        </property>
+                        <property name="checkable">
+                          <bool>true</bool>
+                        </property>
+                        <property name="minimumSize">
+                          <size>
+                            <width>90</width>
+                            <height>35</height>
+                          </size>
+                        </property>
+                      </widget>
+                    </item>
+                    <item>
+                      <spacer name="spacerBetweenRemoveAndWhere">
+                        <property name="orientation">
+                          <enum>Qt::Vertical</enum>
+                        </property>
+                        <property name="sizeHint">
+                          <size>
+                            <width>20</width>
+                            <height>20</height>
+                          </size>
+                        </property>
+                      </spacer>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QLabel" name="labelWhere">
+                        <property name="text">
+                          <string>Where:</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item alignment="Qt::AlignHCenter">
+                      <widget class="QWidget" name="radioGroupWhere">
+                        <layout class="QVBoxLayout" name="vLayoutWhere">
+                          <item>
+                            <widget class="QRadioButton" name="radioZpm">
+                              <property name="text">
+                                <string>z±</string>
+                              </property>
+                            </widget>
+                          </item>
+                          <item>
+                            <widget class="QRadioButton" name="radioZp">
+                              <property name="text">
+                                <string>z+</string>
+                              </property>
+                            </widget>
+                          </item>
+                          <item>
+                            <widget class="QRadioButton" name="radioZm">
+                              <property name="text">
+                                <string>z-</string>
+                              </property>
+                            </widget>
+                          </item>
+                        </layout>
+                      </widget>
+                    </item>
+                  </layout>
+                </widget>
+              </item>
+
             </layout>
           </widget>
         </item>
@@ -376,6 +502,69 @@
                 </widget>
               </item>
               <item>
+                <widget class="QGroupBox" name="groupLogic">
+                  <layout class="QVBoxLayout" name="verticalLayout_logic">
+                    <property name="spacing">
+                      <number>2</number>
+                    </property>
+                    <property name="topMargin">
+                      <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                      <number>0</number>
+                    </property>
+                    <property name="leftMargin">
+                      <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                      <number>0</number>
+                    </property>
+                    <item>
+                      <widget class="QRadioButton" name="radioAnd">
+                        <property name="text">
+                          <string>AND</string>
+                        </property>
+                        <property name="sizePolicy">
+                          <sizepolicy hsizetype="Preferred" vsizetype="Fixed"/>
+                        </property>
+                        <property name="minimumSize">
+                          <size>
+                            <width>0</width>
+                            <height>15</height>
+                          </size>
+                        </property>
+                        <property name="checked">
+                          <bool>true</bool>
+                        </property>
+                      </widget>
+                    </item>
+                    <item>
+                      <widget class="QRadioButton" name="radioOr">
+                        <property name="text">
+                          <string>OR</string>
+                        </property>
+                        <property name="sizePolicy">
+                          <sizepolicy hsizetype="Preferred" vsizetype="Fixed"/>
+                        </property>
+                        <property name="minimumSize">
+                          <size>
+                            <width>0</width>
+                            <height>15</height>
+                          </size>
+                        </property>
+                      </widget>
+                    </item>
+                  </layout>
+                </widget>
+              </item>
+              <item>
+                <widget class="Line" name="line3">
+                  <property name="orientation">
+                    <enum>Qt::Vertical</enum>
+                  </property>
+                </widget>
+              </item>
+              <item>
                 <widget class="QLabel" name="labelVMD">
                   <property name="text">
                     <string>VMD Selection:</string>
@@ -393,79 +582,6 @@
                 </widget>
               </item>
               <item>
-                <widget class="Line" name="line3">
-                  <property name="orientation">
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QLabel" name="labelManual">
-                  <property name="text">
-                    <string>Manual</string>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnAddOH">
-                  <property name="checkable">
-                    <bool>true</bool>
-                  </property>
-                  <property name="text">
-                    <string>Add OH</string>
-                  </property>
-                  <property name="minimumSize">
-                    <size>
-                      <width>70</width>
-                      <height>40</height>
-                    </size>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnAddO">
-                  <property name="checkable">
-                    <bool>true</bool>
-                  </property>
-                  <property name="text">
-                    <string>Add O</string>
-                  </property>
-                  <property name="minimumSize">
-                    <size>
-                      <width>60</width>
-                      <height>40</height>
-                    </size>
-                  </property>
-                </widget>
-              </item>
-              <item>
-                <widget class="QPushButton" name="btnRemoveOx">
-                  <property name="checkable">
-                    <bool>true</bool>
-                  </property>
-                  <property name="text">
-                    <string>Remove Ox.</string>
-                  </property>
-                  <property name="icon">
-                    <iconset>
-                      <normaloff>:/icons/img/svg/remove_one.svg</normaloff>
-                    </iconset>
-                  </property>
-                  <property name="minimumSize">
-                    <size>
-                      <width>130</width>
-                      <height>40</height>
-                    </size>
-                  </property>
-                  <property name="iconSize">
-                    <size>
-                      <width>25</width>
-                      <height>25</height>
-                    </size>
-                  </property>
-                </widget>
-              </item>
-              <item>
                 <widget class="Line" name="line4">
                   <property name="orientation">
                     <enum>Qt::Vertical</enum>
@@ -473,37 +589,44 @@
                 </widget>
               </item>
               <item>
-                <widget class="QLabel" name="labelWhere">
+                <widget class="QPushButton" name="btnAddOxidation">
                   <property name="text">
-                    <string>Where:</string>
+                    <string>Add Oxidation to selection</string>
+                  </property>
+                  <property name="minimumSize">
+                    <size>
+                      <width>200</width>
+                      <height>40</height>
+                    </size>
                   </property>
                 </widget>
               </item>
               <item>
-                <widget class="QWidget" name="radioGroupWhere">
-                  <layout class="QHBoxLayout" name="hLayoutWhere">
-                    <item>
-                      <widget class="QRadioButton" name="radioZpm">
-                        <property name="text">
-                          <string>z±</string>
-                        </property>
-                      </widget>
-                    </item>
-                    <item>
-                      <widget class="QRadioButton" name="radioZp">
-                        <property name="text">
-                          <string>z+</string>
-                        </property>
-                      </widget>
-                    </item>
-                    <item>
-                      <widget class="QRadioButton" name="radioZm">
-                        <property name="text">
-                          <string>z-</string>
-                        </property>
-                      </widget>
-                    </item>
-                  </layout>
+                <widget class="QPushButton" name="btnAddCType">
+                  <property name="text">
+                    <string>Add C type</string>
+                  </property>
+                  <property name="minimumSize">
+                    <size>
+                      <width>120</width>
+                      <height>40</height>
+                    </size>
+                  </property>
+                </widget>
+              </item>
+              <item>
+                <widget class="QComboBox" name="comboCType">
+                  <property name="minimumSize">
+                    <size>
+                      <width>100</width>
+                      <height>40</height>
+                    </size>
+                  </property>
+                  <item>
+                    <property name="text">
+                      <string>ca</string>
+                    </property>
+                  </item>
                 </widget>
               </item>
             </layout>
